# stack-sleuth

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  settings.gradle
.github/workflows/: python-agent-ci.yml  spring-tool-server-ci.yml  web-dashboard-ci.yml
docs/: ARCHITECTURE.md  BUILD_LOG.md  CONTENT_STRATEGY.md  DEMO_SCRIPT.md  DEVELOPMENT_PLAN.md  FRONTEND_DASHBOARD.md  PROJECT_BRIEF.md  SKILLS_AND_DOCS.md  SUBMISSION_CHECKLIST.md  SUBMISSION_PACKAGE.md  TUTORIAL.md
docs/articles/: 00-why-stacksleuth-is-a-dx-portfolio.ko.md  01-safe-spring-tool-server.ko.md  02-defense-in-depth-sql-safety.ko.md  03-openai-function-calling-agent-loop.ko.md  04-react-agent-trace-dashboard.ko.md  04-terminal-cli-agent-trace-replay.ko.md  05-agent-failure-modes-and-evals.ko.md  05-react-agent-trace-dashboard.ko.md  README.md  (+1 more)
docs/assets/: README.md
evals/: run_evals.py  scenarios.yml
examples/: README.md
infra/: docker-compose.yml
python-agent-service/: README.md  pyproject.toml
python-agent-service/app/: __init__.py  agent_loop.py  config.py  main.py  models.py  openai_client.py  redaction.py  tool_router.py  tool_schemas.py  trace_store.py
python-agent-service/ops_agent/: __init__.py  client.py  formatting.py  main.py
python-agent-service/tests/: test_agent_loop.py  test_agent_service_integration.py  test_api.py  test_cli.py  test_evals_runner.py  test_openai_client.py  test_redaction.py  test_tool_router.py  test_tool_schemas.py  test_trace_store.py
spring-tool-server/: build.gradle
web-dashboard/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
(+70 files in other folders)
